# weather_forcast

./: .gitignore  CMakeLists.txt  README.md
include/: wether_api.hpp
src/: errorHandle.cpp  main.cpp  wether_api.cpp
